# vt-ferry

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
crates/hvf-iosurface-probe/: Cargo.toml
crates/hvf-iosurface-probe/src/: main.rs
crates/vt-ferry-broker/: Cargo.toml
crates/vt-ferry-broker/src/: host_worker.rs  main.rs  pool.rs  tcp_bridge.rs
crates/vt-ferry-broker/tests/: supervision.rs
crates/vt-ferry-protocol/: Cargo.toml
crates/vt-ferry-protocol/src/: lib.rs
crates/vt-ferry-shim/: Cargo.toml
crates/vt-ferry-shim/include/: Availability.h  AvailabilityMacros.h  TargetConditionals.h
crates/vt-ferry-shim/include/CoreFoundation/: CoreFoundation.h
crates/vt-ferry-shim/include/CoreMedia/: CoreMedia.h
crates/vt-ferry-shim/include/CoreVideo/: CoreVideo.h
crates/vt-ferry-shim/include/VideoToolbox/: VideoToolbox.h
crates/vt-ferry-shim/src/: corefoundation.rs  coremedia.rs  corevideo.rs  lib.rs  runtime.rs  transport.rs  videotoolbox.rs
crates/vt-ferry-worker/: Cargo.toml  build.rs  sizes.rs  vt_ferry_worker.d
crates/vt-ferry-worker/src/: backend.rs  iosurface_bridge.rs  iosurface_pool_directory.rs  main.rs  mock.rs  probes.rs  server.rs  vt_real.rs  vt_stub.rs
crates/vt-ferry-worker/tests/: connection_isolation.rs  failure_injection_soak.rs
crates/zero-copy-harness/: Cargo.toml
crates/zero-copy-harness/src/: main.rs
ffmpeg/: Dockerfile  LOCAL-TRACE.md  README.md  SOURCE-TRACE.md
ffmpeg/patches/: 0001-vt-ferry-linux-videotoolbox-build-seam.patch
ffmpeg/scripts/: aarch64-linux-gnu-clang.sh  benchmark_host_guest_cpu_budget.sh  benchmark_host_guest_reference_decode.sh  benchmark_host_guest_reference_encode.sh  benchmark_host_guest_reference_transcode.sh  benchmark_host_guest_reference_transcode_hevc.sh  benchmark_host_guest_reference_transcode_multirendition.sh  benchmark_host_guest_reference_transcode_scale.sh  build_inside_container.sh  build_vt_ferry_image.sh  capture_local_vt_trace.sh  compare_host_guest_videotoolbox_decode.sh  compare_host_guest_videotoolbox_smoke.sh  long_decode_fidelity.sh  long_decode_fidelity_hevc.sh  long_encode_fidelity.sh  prepare_linux_videotoolbox_tree.sh  prepare_smolvm_vt_bench_image.sh  prototype_docker_pipe_overhead.sh  prove_docker_videotoolbox_tcp.sh  prove_docker_videotoolbox_tcp_hevc.sh  prove_smolvm_videotoolbox_audio_passthrough.sh  prove_smolvm_videotoolbox_containers.sh  prove_smolvm_videotoolbox_decode.sh  prove_smolvm_videotoolbox_decode_1080p.sh  prove_smolvm_videotoolbox_decode_4k.sh  prove_smolvm_videotoolbox_decode_abr.sh  prove_smolvm_videotoolbox_decode_hevc.sh  prove_smolvm_videotoolbox_encode.sh  prove_smolvm_videotoolbox_filtergraph.sh  prove_smolvm_videotoolbox_hevc.sh  prove_smolvm_videotoolbox_hevc_p010.sh  prove_smolvm_videotoolbox_multistream.sh  prove_smolvm_videotoolbox_transcode.sh  prove_smolvm_videotoolbox_transcode_concurrent.sh  stage_guest_shim_libs.sh  trace_videotoolbox_source.sh  v1_decode_perf_gate.sh  v1_decode_perf_gate_4k.sh  v1_decode_perf_gate_hevc.sh  (+5 more)
ffmpeg/scripts/lib/: image_mode.sh
ffmpeg/scripts/perf/: README.md  probe_audit.d  run_perf_gate_with_dtrace.sh
