[workspace]
resolver = "2"
members = [
    "crates/vt-ferry-protocol",
    "crates/vt-ferry-shim",
    "crates/vt-ferry-worker",
    "crates/vt-ferry-broker",
    "crates/zero-copy-harness",
    "crates/hvf-iosurface-probe",
]

[workspace.package]
version = "0.1.0"
authors = ["Timothy J Fontaine <tjfontaine@atxconsulting.com>"]
license = "MIT"
repository = "https://github.com/tjfontaine/vt-ferry"
homepage = "https://github.com/tjfontaine/vt-ferry"
readme = "README.md"
edition = "2024"
