[package]
name = "vt-ferry-broker"
description = "Launcher that pre-allocates IOSurface pools, registers them with the kernel, and supervises a smolvm + host-worker pair."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition = "2024"

[[bin]]
name = "vt-ferry-broker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
libc = "0.2.185"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
clap = { version = "4", features = ["derive"] }
