[package]
name = "vt-ferry-worker"
description = "macOS host-side worker for vt-ferry — drives real VideoToolbox sessions on behalf of Linux guests."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"
core-media = "0.7.1"
core-media-sys = "0.1.2"
core-video = "0.5.2"
core-video-sys = "0.1.4"
ctrlc = "3.5.2"
libc = "0.2.185"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
vt-ferry-protocol = { version = "0.1.0", path = "../vt-ferry-protocol" }
usdt = "0.6.0"
video-toolbox = "0.2.1"
video-toolbox-sys = "0.2.0"
zerocopy = "0.8.48"
